<resources>
    <string name="app_name">Plateful</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="make_a_plateful_of_delicious_meals">Make a plateful of delicious meals!</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username_is_required">Username is required.</string>
    <string name="email_is_required">Email is required.</string>
    <string name="password_is_required">Password is required.</string>
    <string name="confirm_password_is_required">Confirm password is required.</string>
    <string name="sign_in_as_guest">Sign in as guest</string>
    <string name="sign_up_with_email">Sign up with email</string>
    <string name="or_use_social_sign_up">or use social sign up</string>
    <string name="continue_with_Goggle">Continue with Goggle</string>
    <string name="continue_with_Facebook">Continue with Facebook</string>
    <string name="already_have_account_log_in">Already have account? Log In</string>
    <string name="daily_inspiration">Daily Inspiration</string>
    <string name="browse_cuisines">Browse Cuisines</string>
    <string name="browse_all_cuisines">Browse All Cuisines</string>
    <string name="add_to_plan">Add to plan</string>
    <string name="search_for_a_meal">Search for a meal</string>
    <string name="main_search_bar_placeholder">Search</string>
    <string name="search_by_category">Search by category</string>
    <string name="fragment_label_search">Search</string>
    <string name="view_all"><u>View All</u></string>
    <string name="fragment_label_splash_screen">Splash Screen</string>
    <string name="background_welcome_content_description">Welcome screen background image of a breakfast</string>
    <string name="ic_meal_content_description">Fork and knife icon to represent meal</string>
    <string name="meal_daily_inspiration_content_description">Meal image</string>
    <string name="bottom_nav_destination_home">Home</string>
    <string name="bottom_nav_destination_search">Search</string>
    <string name="bottom_nav_destination_favorite">Favorite</string>
    <string name="bottom_nav_destination_plan">Plan</string>
    <string name="your_username">Your username</string>
    <string name="your_favorite_meals">Your Favorite Meals</string>
    <string name="you_still_have_not_added_any_meals_yet">You haven\'t added any meals yet.</string>
    <string name="meal_deleted">Meal deleted from favorites</string>
    <string name="undo">UNDO</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="cuisine">Cuisine: </string>
    <string name="category">Category: </string>
    <string name="ingredients">Ingredients: </string>
    <string name="instructions">Instructions: </string>
    <string name="video">Video: </string>
    <string name="your_weekly_plan">Your Weekly Plan</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="saturday">Saturday</string>
    <string name="friday">Friday</string>
    <string name="thursday">Thursday</string>
    <string name="wednesday">Wednesday</string>
    <string name="tuesday">Tuesday</string>
    <string name="select_a_date">Select a date</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="no_favorite_meals_for_guest_mode">No favorite meals for guest mode.</string>
    <string name="no_plans_available_in_guest_mode">No plans available in guest mode.</string>
    <string name="back_up_data">Back up data</string>
    <string name="data_backed_up_successfully">Data backed up successfully!</string>
    <string name="search_by_ingredients">Search by Ingredients</string>
    <string name="search_by_ingredient">Search by Ingredient</string>


</resources>