<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.socialaccountsignin.view.WelcomeScreen">


    <ImageView
        android:id="@+id/bg_welcome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background_welcome_content_description"
        android:scaleType="fitXY"
        android:src="@drawable/bg_welcome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/linear_gradient_background"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <Button
        android:id="@+id/button_sing_in_as_guest"
        style="@style/BlackButton"
        android:layout_width="255dp"
        android:layout_height="60dp"
        android:text="@string/sign_in_as_guest"
        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_sign_up_with_email"
        style="@style/BlackButton"
        android:layout_width="255dp"
        android:layout_height="60dp"
        android:text="@string/sign_up_with_email"
        app:layout_constraintTop_toBottomOf="@id/button_sing_in_as_guest"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="32dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="32dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="52dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="250dp" />

    <!--The dividers don't appear on the UI-->
    <View
        android:id="@+id/divider_1"
        style="@style/divider"
        android:layout_marginTop="52dp"
        android:elevation="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toBottomOf="@id/button_sign_up_with_email"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_left"
        app:layout_constraintEnd_toEndOf="parent" />

    <!--The dividers don't appear on the UI-->
    <View
        android:id="@+id/divider_2"
        style="@style/divider"
        android:layout_marginTop="52dp"
        android:elevation="8dp"
        android:foregroundTint="#FCFBFB"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_right"
        app:layout_constraintTop_toBottomOf="@id/button_sign_up_with_email" />

    <TextView
        android:id="@+id/textView_or_use_social_media_sign_up"
        style="@style/SubText"
        android:layout_marginStart="28dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/or_use_social_sign_up"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.438"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_sign_up_with_email" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="395dp" />

    <Button
        android:id="@+id/button_continue_with_Goggle"
        style="@style/WhiteButton"
        android:layout_width="255dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:text="@string/continue_with_Goggle"
        app:icon="@drawable/ic_google"
        android:padding="12dp"
        app:iconPadding="-12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_or_use_social_media_sign_up" />

    <Button
        android:id="@+id/button_continue_with_Facebook"
        style="@style/WhiteButton"
        android:layout_width="255dp"
        android:layout_height="60dp"
        android:text="@string/continue_with_Facebook"
        app:icon="@drawable/ic_facebook"
        android:padding="12dp"
        app:iconPadding="2dp"
        app:layout_constraintTop_toBottomOf="@id/button_continue_with_Goggle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView_already_have_an_account"
        style="@style/SubText"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/already_have_account_log_in"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.438"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_continue_with_Facebook" />

</androidx.constraintlayout.widget.ConstraintLayout>